DevConnect-DevOps/k8s-local/servicemonitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-metrics
  namespace: devconnect-prod
  labels:
    app: backend
    release: prometheus
spec:
  selector:
    app: backend
  ports:
    - name: metrics
      port: 5000
      targetPort: 5000
