DevConnect-DevOps/k8s-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devconnect-ingress
  namespace: devconnect-prod
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
  - host: devconnect.programmingprophet.site
    http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8080
